# Extracto

./: .env.example  .gitignore  Dockerfile  README.md  ai_extractor.py  browser_engine.py  crawl.example.yaml  crawler_engine.py  main.py  pyproject.toml  requirements.txt  robots.py  server.py  sitemap.py  urls.example.txt  utils.py  webhooks.py  wizard.py
docs/: app.js  index.html  llms.txt  robots.txt  sitemap.xml  style.css
docs/compare/: extracto-vs-apify.html  extracto-vs-browse-ai.html  extracto-vs-crawl4ai.html  extracto-vs-diffbot.html  extracto-vs-firecrawl.html  extracto-vs-scrapegraphai.html  extracto-vs-scrapling.html  extracto-vs-scrapy.html
docs/seo/: COMPETITOR-ANALYSIS.md  FULL-AUDIT-REPORT.md  SEO-STRATEGY.md  SITE-STRUCTURE.md
docs/use-cases/: ecommerce-scraping.html  real-estate-scraping.html
src/extracto/: __init__.py  ai_extractor.py  browser_engine.py  cache.py  config.py  crawler_engine.py  data_exporter.py  main.py  schema.py  server.py  wizard.py
