[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extracto-scraper"
version = "2.0.4"
authors = [
  { name="Nishal", email="nishalamv@gmail.com" },
]
description = "AI-powered web scraper. Extract structured data using plain English."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "crawlee[playwright]>=1.0.0",
    "playwright>=1.40.0",
    "scrapegraphai>=1.0.0",
    "pandas>=2.0.0",
    "html2text>=2024.2.26",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "langchain-mistralai>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0"
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn"]

[project.urls]
"Homepage" = "https://github.com/nishal21/Extracto"
"Bug Tracker" = "https://github.com/nishal21/Extracto/issues"

[project.scripts]
extracto = "extracto.main:cli_entry"
